add: thêm cơ chế format all code và format luôn lần đầu cũng như github ci